<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/widget_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextNewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextNewUserFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_full_name"
            android:inputType="text|textCapWords" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onCreateNewUserButtonClick"
            android:text="@string/create_new_user" />
    </LinearLayout>

</LinearLayout>