<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:background="@color/app_background_color_pink"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/widget_title_text_size" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        android:gravity="center"
        android:text="@string/version"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextUsername"
            style="@style/TransparentTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/TransparentTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/TransparentTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:onClick="onLoginClick"
        android:textSize="@dimen/widget_title_text_size"
            android:text="@string/login"/>
        
        <Button
            style="@style/TransparentButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right|center_vertical"
            android:onClick="onForgotPasswordButtonClicked"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textStyle="italic" />
        
        <Button
             android:id="@+id/buttonResetPassword"
            style="@style/TransparentButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right|center_vertical"
            android:onClick="onResetPasswordtButtonClicked"
            android:text="@string/reset_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:visibility="gone" />

        
        <Button
            android:id="@+id/imageButtonCreateUserAccount"
            style="@style/TransparentButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right|center_vertical"
            android:onClick="onCreateUserAccountButtonClicked"
            android:padding="@dimen/button_bar_padding"
            android:text="@string/add_user"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:visibility="gone" />


            
           
 
    </LinearLayout>

</LinearLayout>